--- a/README
+++ b/README
@@ -3,4 +3,5 @@ Este es el primer texto que colocamos. El README  aparece  siempre de primero y 
 
 ## DETALLES
 Este archivo está en MARKDOWN y el proyecto es una página HTML sencilla.
+Nueva línea de código
 
